# music-and-mood

./: .cache  .env.example  .gitignore  README.md  music_and_mood_trends.ipynb  music_and_mood_trends.py  pyproject.toml  sub_corrs_history.txt
scripts/: download_kaggle_data.py  patch_cluster_viz.py  patch_sub_corrs.py
src/cmi/: __init__.py  config.py
src/cmi/clustering/: __init__.py  diagnostics.py  temporal.py
src/cmi/correlation/: __init__.py  econometrics.py
src/cmi/features/: __init__.py  audio.py  audio_analysis.py  embeddings.py  fusion.py
src/cmi/ingest/: __init__.py  fred_macro.py  genius_lyrics.py  spotify_charts.py
src/cmi/narrative/: __init__.py  engine.py
src/cmi/utils/: cost_estimator.py
